Update slides for NodeSchool 23

--- a/presentations/intro-to-nodeschool/css/theme/nodeschool.css
+++ b/presentations/intro-to-nodeschool/css/theme/nodeschool.css
@@ -298,6 +298,7 @@ body {
   height: 3em; }
 
 .reveal .hosts .host {
+  vertical-align: top;
   width: 6em;
   display: inline-block;
   text-align: center;
